--- a/catalog/view/theme/default/template/checkout/checkout/_comment.twig
+++ b/catalog/view/theme/default/template/checkout/checkout/_comment.twig
@@ -1,4 +1,9 @@
-<div class="checkout-section" id="comment-section">
-  <p>{{ text_comments }}</p>
-  <textarea name="comment" rows="8" class="form-control">{{ comment }}</textarea>
+
+<div class="cart-extra-info" id="comment-section">
+  <label>
+      {{ text_comments }}
+  </label>
+  <div class="list-input" style="box-sizing: border-box;">
+    <textarea name="comment" \ cols="60" rows="10" placeholder="Optional" class="check_comment textarea resize" style="width: 100%; border-color: rgb(208, 208, 208);"></textarea>
+  </div>
 </div>
