--- a/catalog/view/theme/default/template/checkout/checkout/_confirm.twig
+++ b/catalog/view/theme/default/template/checkout/checkout/_confirm.twig
@@ -1,59 +1,67 @@
-<div class="checkout-section" id="cart-section">
-  <h4>{{ text_checkout_cart }}</h4>
+  <div class="checkout-section" id="cart-section" style="margin-top:30px;">
+
   {% if redirect %}
     <script type="text/javascript"><!--
     location = '{{ redirect }}';
     //--></script>
   {% else %}
-    <div class="table-responsive">
-      <table class="table table-hover" style="border: 0px;">
-        <thead>
-          {#<tr>#}
-            {#<td class="text-left"></td>#}
-            {#<td class="text-left">{{ column_name }}</td>#}
-            {#<td class="text-left">{{ column_model }}</td>#}
-            {#<td class="text-right">{{ column_quantity }}</td>#}
-            {#<td class="text-right">{{ column_price }}</td>#}
-            {#<td class="text-right">{{ column_total }}</td>#}
-          {#</tr>#}
-        </thead>
+    <div id="shopping_cart_do_price" class="cart-address-state-wrap cart-dt-wrap">
+      <div class="cart-placeorder-header cat-address-state ">
+        <h2>
+          Shopping Bag
+        </h2>
+      </div>
+      <input id="update_shopping_price_type" name="update_shopping_price_type" value="checkout" type="hidden">
+      <table class="cart-list-details" width="100%" cellspacing="0" cellpadding="0" border="0">
         <tbody>
-          {#{% for product in products %}#}
-          {#<tr>#}
-            {#<td style="width:60px"><img src="{{ product.image }}" class="thumbnail"></td>#}
-            {#<td class="text-left">{{ product.name }}#}
-              {#{% for option in product.option %}#}
-              {#<br />#}
-              {#&nbsp;<small> - {{ option.name }}: {{ option.value }}</small>#}
-              {#{% endfor %}#}
-            {#</td>#}
-            {#<td class="text-left">{{ product.model }}</td>#}
-            {#<td class="text-right">{{ product.quantity }}</td>#}
-            {#<td class="text-right">{{ product.price }}</td>#}
-            {#<td class="text-right">{{ product.total }}</td>#}
-          {#</tr>#}
-          {#{% endfor %}#}
-          {#{% for voucher in vouchers %}#}
-          {#<tr>#}
-            {#<td></td>#}
-            {#<td class="text-left">{{ voucher.description }}</td>#}
-            {#<td class="text-left"></td>#}
-            {#<td class="text-right">1</td>#}
-            {#<td class="text-right">{{ voucher.amount }}</td>#}
-            {#<td class="text-right">{{ voucher.amount }}</td>#}
-          {#</tr>#}
-          {#{% endfor %}#}
-        &nbsp;
+        <tr class="cart-list-details-title">
+          <th class="gray" style="width: 13.7%;">
+          </th>
+          <th class="gray" style="width: 43.1%;">
+              {{ column_name }}
+          </th>
+          <th class="gray" style="width: 8.2%;">
+              {{ column_quantity }}
+          </th>
+          <th class="gray" style="width: 26.8%;">
+              {{ column_price }}
+          </th>
+          <th class="gray" style="width: 8.2%;">
+              {{ column_total }}
+          </th>
+        </tr>
+        {% for product in products %}
+        <tr id="basket_cont" class="cart-item-details">
+          <td class="pic">
+            <img src="{{ product.image }}">
+          </td>
+          <td class="cart-item-details-info gray">
+            <a href="">
+                {{ product.name }}
+            </a>
+              {% for option in product.option %}
+                <br />
+                &nbsp;<small> {{ option.name }}: {{ option.value }}</small>
+              {% endfor %}
+          </td>
+          <td class="quantity-td gray">
+              {{ product.quantity }}
+          </td>
+          <td class="cart-check-price shoppingtop_price_and_discount discount_goods_price_389423017_385492">
+              {{ product.price }}
+          </td>
+          <td class="sum-td">
+              {{ product.total }}
+          </td>
+        </tr>
+        {% endfor %}
         </tbody>
-        <tfoot>
-          {% for total in totals %}
-          <tr>
-            <td colspan="5" class="text-left"><strong style="color: #000;">{{ total.title }}:</strong></td>
-            <td class="text-right">{{ total.text }}</td>
-          </tr>
-          {% endfor %}
-        </tfoot>
       </table>
+      <div class="basket_totalPrice">
+      </div>
     </div>
+
   {% endif %}
 </div>
+
+
