--- a/catalog/view/theme/default/template/checkout/checkout/_payment_method.twig
+++ b/catalog/view/theme/default/template/checkout/checkout/_payment_method.twig
@@ -1,10 +1,13 @@
 <div class="checkout-section" id="payment-method-section">
-  <h2>{{ text_checkout_payment_method }}</h2>
+    <div class="cart-placeorder-header cat-address-state ">
+        <h2>{{ text_checkout_payment_method }}</h2>
+    </div>
+
   {% if error_warning %}
     <div class="alert alert-warning"><i class="fa fa-exclamation-circle"></i> {{ error_warning }}</div>
   {% endif %}
   {% if payment_methods %}
-    <p>{{ text_payment_method }}</p>
+
     {% for payment_method in payment_methods %}
     <div class="radio {{ payment_method.code == code or not code ? 'active' }}">
       <label>
