--- a/catalog/view/theme/default/template/common/header.twig
+++ b/catalog/view/theme/default/template/common/header.twig
@@ -24,6 +24,7 @@
   <link media="all" href="catalog/view/theme/default/css/myorder.css" type="text/css" rel="stylesheet">
   <link media="all" href="catalog/view/theme/default/css/address.css" type="text/css" rel="stylesheet">
   <link media="all" href="catalog/view/theme/default/css/reward.css" type="text/css" rel="stylesheet">
+  <link media="all" href="catalog/view/theme/default/css/checkout_x.css" type="text/css" rel="stylesheet">
 
   <link media="all" href="/catalog/view/theme/default/css/wishlist.css" type="text/css" rel="stylesheet">
   <link media="all" href="/catalog/view/theme/default/css/transation.css" type="text/css" rel="stylesheet">
