--- a/catalog/view/theme/default/template/product/write.twig
+++ b/catalog/view/theme/default/template/product/write.twig
@@ -7,12 +7,11 @@
     outline: 0;
   }
 </style>
-
-<div id="product-product" class="container" style="margin-top: 10%">
+{{ header }}
+<div id="product-product" class="container" style="margin-top: 3%">
     <h1 style="text-align: center">{{ text_write }}</h1>
 <div class="tab-pane" id="tab-review">
 
-{#{% if review_guest %}#}
 <form class="form-horizontal" id="form-review" type="">
 <div class="form-group required">
   <div class="col-sm-12">
@@ -45,13 +44,15 @@
 
   {#图片#}
     <img src="" id="img0" style="width: 20rem;height: 15rem;position: relative">
-  <input id="file" class="ufile" type="file" name="file" accept="image/gif,image/jpeg,image/jpg,image/png" style="border: 1px solid red;opacity: 0;height: 19%;width: 12.5%;position: absolute;left: 20.4%;top: 53%;">
-  <button type="button" onclick="clean()" style="position: absolute;left: 31.56%;background:rgba(0,0,0,0);border: none;">X</button>
+  <input id="file" class="ufile" type="file" name="file" accept="image/gif,image/jpeg,image/jpg,image/png" style="border: 1px solid red;opacity: 0;height: 19%;width: 12.5%;position: absolute;left: 20%;top: 49%;">
+  <button type="button" onclick="clean()" style="position: absolute;left: 31.8%;background:rgba(0,0,0,0);border: none;">X</button>
     <div></div>
 
     {#{{ captcha }}#}
-<a href="index.php?route=account/order" style="text-decoration: none;color: #fff;"><button type="button" data-loading-text="{{ text_loading }}" class="btn btn-success">返回</button></a>
-<button type="button" id="button-review" data-loading-text="{{ text_loading }}" class="btn btn-primary">{{ button_submit }}</button>
+  <div style="text-align: center;">
+    <a href="javascript:void(0);"  onclick="javascript:history.back(-1);" style="text-decoration: none;color: #fff;"><button type="button" data-loading-text="{{ text_loading }}" class="btn btn-success">返回</button></a>
+    <button type="button" id="button-review" data-loading-text="{{ text_loading }}" class="btn btn-primary" style="margin-left: 10%">{{ button_submit }}</button>
+  </div>
 
 {#{% else %}#}
 {#{{ text_login }}#}
@@ -59,6 +60,8 @@
 </form>
 </div>
 </div>
+<div style="margin-bottom: 4%"></div>
+{{ footer }}
 
 <script>
     $("#file").change(function(){
