--- a/catalog/view/theme/default/template/checkout/checkout/_payment_method.twig
+++ b/catalog/view/theme/default/template/checkout/checkout/_payment_method.twig
@@ -1,5 +1,5 @@
-<div class="checkout-section" id="payment-method-section">
-    <div class="cart-placeorder-header cat-address-state ">
+<div class="" id="payment-method-section" style="margin-left: 40%;">
+    <div class="cart-placeorder-header  ">
         <h2>{{ text_checkout_payment_method }}</h2>
     </div>
 
