--- a/catalog/view/theme/default/template/checkout/checkout/_confirm.twig
+++ b/catalog/view/theme/default/template/checkout/checkout/_confirm.twig
@@ -60,8 +60,49 @@
       <div class="basket_totalPrice">
       </div>
     </div>
-
   {% endif %}
+    <div class="right-ctn " style="width: 393px; right: 41.8333px; top: auto; visibility: visible; display: block;">
+      <div class="order-sum">
+        {#<div class="cart-placeorder-header">#}
+          {#<h2> Order Summary </h2>#}
+        {#</div>#}
+        <div class="order-summary">
+          <div id="shopping_cart_do_price_total" style="margin-top: 10px;">
+
+              {% for total in totals %}
+                <div class="price-total-item" >
+                  <div class="total-t" style="float: left"> {{ total.title }} </div>
+                  <div class="total" id="shipping_total" style="margin-left: 160%;">
+                    <div class="item_total goods_price_current_price" >
+                        {{ total.text }}
+                    </div>
+                  </div>
+                </div>
+                  <br>
+              {% endfor %}
+
+
+          </div>
+          {#<div class="ac-card">#}
+            {#<h2 class="she-h1"> </h2>#}
+            {#<div class="card-img">#}
+              {#<img src="/catalog/view/theme/default/image/cart/n-ar-codcard_v9d7b3b8.png" class="card-img-ar" />#}
+              {#<img src="/catalog/view/theme/default/image/cart/n-2-visa_vd35286a.png" />#}
+              {#<img src="/catalog/view/theme/default/image/cart/n-3-mastercard_vf9b0f97.png" />#}
+              {#<img src="/catalog/view/theme/default/image/cart/n-8-maestro_v781c6fd.png" />#}
+              {#<img src="/catalog/view/theme/default/image/cart/n-7-american-express_vb186b55.png" class="card-img-common" />#}
+              {#<img src="/catalog/view/theme/default/image/cart/cartnet@2x_v20ad514.png" />#}
+              {#<img src="/catalog/view/theme/default/image/cart/n-1-paypal_va336d76.png" />#}
+              {#<img src="/catalog/view/theme/default/image/cart/n-16-ideal_v42c1656.png" class="card-img-common" />#}
+              {#<img src="/catalog/view/theme/default/image/cart/oxxo@2x_v0ac9136.png" />#}
+              {#<img src="/catalog/view/theme/default/image/cart/wire_transfer@2x_v0896cc5.png" />#}
+            {#</div>#}
+          {#</div>#}
+        </div>
+      </div>
+
+    </div>
+    <input class="she-btn-black she-btn-xl checkout j-checkout-btn" name="checkout" value="{{ button_checkout }}" type="button" style="margin-left: 160%" id="button-submit"/>
 </div>
 
 
