--- a/catalog/view/theme/default/template/account/wishlist.twig
+++ b/catalog/view/theme/default/template/account/wishlist.twig
@@ -32,10 +32,10 @@
                 {% for product in products %}
               <li>
                 <input id="update_price_type" name="update_price_type" value="list" type="hidden" />
-                <div data-sku="tee171114706" data-spu="tee171114706" class="prd-ct-gd-item col-lg-3 col-md-3 col-sm-4 col-xs-6 j-wishlist-item" vip_sale="yes" sort_order="prepend" special_price_hide="no" alt1="406371" data-ga-stock="InStock">
-                  <div class="product j-item-data" data-cat-id="1738" data-ga-price="12.00" data-ga-sku="tee171114706" data-ga-spu="tee171114706" data-ga-name="Checkered Panel Mixed Media T-shirt" viewed="true" style="height: 390px;">
+                <div class="prd-ct-gd-item col-lg-3 col-md-3 col-sm-4 col-xs-6 j-wishlist-item">
+                  <div class="product j-item-data" style="height: 390px;">
                     <div class="image">
-                      <a title="" href="{{ product.href }}" target="_top"> <img alt="{{ product.name }}" src="{{ product.thumb }}" style="height: 265px;width: 200px" border="0" title="{{ product.name }}"  />
+                      <a title="" href="{{ product.href }}" target="_top"> <img alt="{{ product.name }}" src="/image/{{ product.thumb }}" style="height: 265px;width: 200px" border="0" title="{{ product.name }}"  />
                         {#<em class="discount_img">37</em>#}
                         {#<div class="item-like">#}
                           {#<div class="item-like-inner">#}
