--- a/catalog/view/theme/default/template/common/header.twig
+++ b/catalog/view/theme/default/template/common/header.twig
@@ -51,8 +51,8 @@
     <div class="header-wrap">
       <div class="container-fluid mar-b-0">
         <div class="row">
-          <div class="left col-xs-5">
-            <div style="margin-top: -10%;">
+          <div class="left col-xs-5" style="margin-top: -.3%">
+            <div class="language">
               {{ language }}
             </div>
 
